--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
       </dependency>
       <dependency>
         <groupId>com.example</groupId>
+        <artifactId>scheduler-types</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>com.example</groupId>
         <artifactId>scheduler-infrastructure</artifactId>
         <version>1.0-SNAPSHOT</version>
       </dependency>
@@ -150,5 +155,6 @@
     <module>scheduler-infrastructure</module>
     <module>scheduler-main</module>
     <module>scheduler-test</module>
+    <module>scheduler-types</module>
   </modules>
 </project>
