--- a/scheduler-domain/pom.xml
+++ b/scheduler-domain/pom.xml
@@ -17,7 +17,10 @@
             <groupId>com.example</groupId>
             <artifactId>scheduler-spec</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>scheduler-types</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
