--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.example</groupId>
   <artifactId>scheduler</artifactId>
@@ -7,42 +9,20 @@
   <version>1.0-SNAPSHOT</version>
   <name>scheduler</name>
   <properties>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <java.version>1.8</java.version>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <lombok.version>1.18.8</lombok.version>
-    <slf4j.version>1.7.25</slf4j.version>
-    <junit.version>4.13.1</junit.version>
+    <slf4j.version>2.20.0</slf4j.version>
+    <commons.logging.version>1.2</commons.logging.version>
+    <junit.version>4.13.2</junit.version>
     <jacoco.version>0.8.5</jacoco.version>
-    <spring.version>4.3.12.RELEASE</spring.version>
-    <mapstruct.version>1.3.1.Final</mapstruct.version>
-    <dddplus.version>1.1.0</dddplus.version>
+    <spring.version>2.5.0</spring.version>
+    <junit-vintage-engine.version>5.7.2</junit-vintage-engine.version>
   </properties>
   <dependencyManagement>
     <dependencies>
-      <!--DDDplus-->
-      <dependency>
-        <groupId>io.github.dddplus</groupId>
-        <artifactId>dddplus-spec</artifactId>
-        <version>${dddplus.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.github.dddplus</groupId>
-        <artifactId>dddplus-runtime</artifactId>
-        <version>${dddplus.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.github.dddplus</groupId>
-        <artifactId>dddplus-enforce</artifactId>
-        <version>${dddplus.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.github.dddplus</groupId>
-        <artifactId>dddplus-unit</artifactId>
-        <version>${dddplus.version}</version>
-      </dependency> <!--project modules-->
       <dependency>
         <groupId>com.example</groupId>
         <artifactId>scheduler-spec</artifactId>
@@ -83,28 +63,36 @@
         <artifactId>scheduler-main</artifactId>
         <version>1.0-SNAPSHOT</version>
       </dependency> <!-- third party sdk -->
-      <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>${lombok.version}</version>
-        <scope>provided</scope>
-        <optional>true</optional>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
+
+      <!-- <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.mapstruct</groupId>
-        <artifactId>mapstruct</artifactId>
-        <version>${mapstruct.version}</version>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>slf4j-jcl</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency> -->
+      <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>${commons.logging.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-tx</artifactId>
-        <version>${spring.version}</version>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>${slf4j.version}</version>
       </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter</artifactId>
+        <version>${spring.version}</version>
+</dependency>
+
       <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
       <dependency>
         <groupId>org.mybatis.spring.boot</groupId>
@@ -150,7 +138,6 @@
     <module>scheduler-application</module>
     <module>scheduler-facade</module>
     <module>scheduler-domain</module>
-    <module>scheduler-spec</module>
     <module>scheduler-api</module>
     <module>scheduler-infrastructure</module>
     <module>scheduler-main</module>
