--- a/scheduler-domain/pom.xml
+++ b/scheduler-domain/pom.xml
@@ -15,19 +15,16 @@
     <dependencies>
         <dependency>
             <groupId>com.example</groupId>
-            <artifactId>scheduler-spec</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.example</groupId>
             <artifactId>scheduler-types</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-        <dependency>
+
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+      </dependency>
+        <!-- <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-        </dependency>
+        </dependency> -->
     </dependencies>
 </project>
