--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <jacoco.version>0.8.5</jacoco.version>
     <spring.version>2.5.0</spring.version>
     <junit-vintage-engine.version>5.7.2</junit-vintage-engine.version>
+    <mybatis-spring-boot-starter.version>2.1.4</mybatis-spring-boot-starter.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -97,7 +98,7 @@
       <dependency>
         <groupId>org.mybatis.spring.boot</groupId>
         <artifactId>mybatis-spring-boot-starter</artifactId>
-        <version>2.1.3</version>
+        <version>${mybatis-spring-boot-starter.version}</version>
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
