--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
     <commons.logging.version>1.2</commons.logging.version>
     <junit.version>4.13.2</junit.version>
     <jacoco.version>0.8.5</jacoco.version>
-    <spring.version>2.5.0</spring.version>
+    <spring.version>3.0.0</spring.version>
     <junit-vintage-engine.version>5.7.2</junit-vintage-engine.version>
-    <mybatis-spring-boot-starter.version>2.1.4</mybatis-spring-boot-starter.version>
+    <mybatis-spring-boot-starter.version>3.0.0</mybatis-spring-boot-starter.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -134,9 +134,17 @@
         </executions>
       </plugin>
     </plugins>
-  </build>
-  <modules>
-    <module>scheduler-application</module>
+  <resources>
+    <resource>
+      <directory>src/main/resources</directory>
+      <includes>
+        <include>**/*.*</include>
+      </includes>
+    </resource>
+  </resources>
+</build>
+<modules>
+<module>scheduler-application</module>
     <module>scheduler-facade</module>
     <module>scheduler-domain</module>
     <module>scheduler-api</module>
