--- a/scheduler-test/pom.xml
+++ b/scheduler-test/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
@@ -76,5 +82,6 @@
 <!--            <version>1.0-beta-2</version>-->
 <!--        </dependency>-->
     </dependencies>
+
 
 </project>
