--- a/scheduler-main/src/main/resources/application.properties
+++ b/scheduler-main/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=123456
 
 mybatis.inject-sql-session-on-mapper-scan=true
 mybatis.configuration.default-statement-timeout=30
+log.dir=./logs
