--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,15 @@
     <commons.logging.version>1.2</commons.logging.version>
     <junit.version>4.13.2</junit.version>
     <jacoco.version>0.8.5</jacoco.version>
-    <spring.version>3.0.0</spring.version>
+    <spring.version>2.7.1</spring.version>
 
     <validation-api.version>2.0.1.Final</validation-api.version>
-    <hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
+    <jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
+    <hibernate-validator.version>6.2.0.Final</hibernate-validator.version>
     <javax.el.version>3.0.0</javax.el.version>
+    <jakarta.el-api.version>5.0.1</jakarta.el-api.version>
 
+    <org.springframework.version>5.3.21</org.springframework.version>
     <junit-vintage-engine.version>5.7.2</junit-vintage-engine.version>
     <mybatis-spring-boot-starter.version>3.0.0</mybatis-spring-boot-starter.version>
   </properties>
@@ -102,11 +105,24 @@
         <artifactId>validation-api</artifactId>
         <version>${validation-api.version}</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+<!--      <dependency>-->
+<!--        <groupId>jakarta.validation</groupId>-->
+<!--        <artifactId>jakarta.validation-api</artifactId>-->
+<!--        <version>${jakarta.validation-api.version}</version>-->
+<!--      </dependency>-->
       <dependency>
         <groupId>org.hibernate.validator</groupId>
         <artifactId>hibernate-validator</artifactId>
         <version>${hibernate-validator.version}</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/jakarta.el/jakarta.el-api -->
+<!--      <dependency>-->
+<!--        <groupId>jakarta.el</groupId>-->
+<!--        <artifactId>jakarta.el-api</artifactId>-->
+<!--        <version>${jakarta.el-api.version}</version>-->
+<!--      </dependency>-->
+
       <dependency>
         <groupId>org.glassfish</groupId>
         <artifactId>javax.el</artifactId>
@@ -117,6 +133,22 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter</artifactId>
         <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${org.springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${org.springframework.version}</version>
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
