--- a/scheduler-test/pom.xml
+++ b/scheduler-test/pom.xml
@@ -64,7 +64,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring.version}</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -73,14 +72,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-
-        <!-- benchmark test -->
-<!--        <dependency>-->
-<!--            <groupId>com.google.caliper</groupId>-->
-<!--            <artifactId>caliper</artifactId>-->
-<!--            <version>1.0-beta-2</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
     </dependencies>
 
 
