--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
       </dependency>
       <dependency>
         <groupId>com.example</groupId>
+        <artifactId>scheduler-service</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>com.example</groupId>
+        <artifactId>scheduler-daemon</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>com.example</groupId>
         <artifactId>scheduler-domain</artifactId>
         <version>1.0-SNAPSHOT</version>
       </dependency>
@@ -209,5 +219,7 @@
     <module>scheduler-main</module>
     <module>scheduler-test</module>
     <module>scheduler-types</module>
+    <module>scheduler-daemon</module>
+    <module>scheduler-service</module>
   </modules>
 </project>
