--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,14 @@
         <version>${mybatis-spring-boot-starter.version}</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+<dependency>
+    <groupId>org.springframework.kafka</groupId>
+    <artifactId>spring-kafka</artifactId>
+    <version>2.9.1</version>
+</dependency>
+
+
       <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
       <dependency>
         <groupId>mysql</groupId>
