--- a/scheduler-daemon/pom.xml
+++ b/scheduler-daemon/pom.xml
@@ -24,5 +24,9 @@
             <groupId>com.example</groupId>
             <artifactId>scheduler-types</artifactId>
         </dependency>
+    <dependency>
+    <groupId>org.springframework.kafka</groupId>
+    <artifactId>spring-kafka</artifactId>
+</dependency>
     </dependencies>
 </project>
