--- a/scheduler-main/src/main/resources/application.properties
+++ b/scheduler-main/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=123456
 mybatis.inject-sql-session-on-mapper-scan=true
 mybatis.configuration.default-statement-timeout=30
 log.dir=./logs
+spring.kafka.bootstrap-servers=127.0.0.1
