--- a/scheduler-main/src/main/resources/application.properties
+++ b/scheduler-main/src/main/resources/application.properties
@@ -8,3 +8,4 @@ mybatis.inject-sql-session-on-mapper-scan=true
 mybatis.configuration.default-statement-timeout=30
 log.dir=./logs
 spring.kafka.bootstrap-servers=127.0.0.1
+scheduler.kafka.groupId=test
