--- a/pom.xml
+++ b/pom.xml
@@ -116,22 +116,22 @@
         <version>${validation-api.version}</version>
       </dependency>
       <!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
-<!--      <dependency>-->
-<!--        <groupId>jakarta.validation</groupId>-->
-<!--        <artifactId>jakarta.validation-api</artifactId>-->
-<!--        <version>${jakarta.validation-api.version}</version>-->
-<!--      </dependency>-->
+      <!--      <dependency>-->
+      <!--        <groupId>jakarta.validation</groupId>-->
+      <!--        <artifactId>jakarta.validation-api</artifactId>-->
+      <!--        <version>${jakarta.validation-api.version}</version>-->
+      <!--      </dependency>-->
       <dependency>
         <groupId>org.hibernate.validator</groupId>
         <artifactId>hibernate-validator</artifactId>
         <version>${hibernate-validator.version}</version>
       </dependency>
       <!-- https://mvnrepository.com/artifact/jakarta.el/jakarta.el-api -->
-<!--      <dependency>-->
-<!--        <groupId>jakarta.el</groupId>-->
-<!--        <artifactId>jakarta.el-api</artifactId>-->
-<!--        <version>${jakarta.el-api.version}</version>-->
-<!--      </dependency>-->
+      <!--      <dependency>-->
+      <!--        <groupId>jakarta.el</groupId>-->
+      <!--        <artifactId>jakarta.el-api</artifactId>-->
+      <!--        <version>${jakarta.el-api.version}</version>-->
+      <!--      </dependency>-->
 
       <dependency>
         <groupId>org.glassfish</groupId>
@@ -169,12 +169,17 @@
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
-<dependency>
-    <groupId>org.springframework.kafka</groupId>
-    <artifactId>spring-kafka</artifactId>
-    <version>2.9.1</version>
-</dependency>
+      <dependency>
+        <groupId>org.springframework.kafka</groupId>
+        <artifactId>spring-kafka</artifactId>
+        <version>2.9.1</version>
+      </dependency>
 
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>31.0.1-jre</version>
+      </dependency>
 
       <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
       <dependency>
