--- a/scheduler-domain/pom.xml
+++ b/scheduler-domain/pom.xml
@@ -9,9 +9,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <packaging>jar</packaging>
+    <groupId>com.example</groupId>
     <artifactId>scheduler-domain</artifactId>
     <name>scheduler-domain</name>
-    <description>领域层，沉淀业务资产</description>
+    <description>Domain Layer</description>
 
     <dependencies>
         <dependency>
@@ -36,19 +38,10 @@
             <artifactId>validation-api</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>jakarta.validation</groupId>-->
-<!--            <artifactId>jakarta.validation-api</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/jakarta.el/jakarta.el-api -->
-<!--        <dependency>-->
-<!--            <groupId>jakarta.el</groupId>-->
-<!--            <artifactId>jakarta.el-api</artifactId>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>org.glassfish</groupId>
@@ -81,4 +74,20 @@
             </exclusions>
         </dependency>
     </dependencies>
+
+    <build>
+        <defaultGoal>package</defaultGoal>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
