--- a/scheduler-infrastructure/pom.xml
+++ b/scheduler-infrastructure/pom.xml
@@ -7,13 +7,15 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <packaging>jar</packaging>
     <properties>
         <mybatis.generator.overwrite>true</mybatis.generator.overwrite>
      </properties>
 
+    <groupId>com.example</groupId>
     <artifactId>scheduler-infrastructure</artifactId>
     <name>scheduler-infrastructure</name>
-    <description>经典DDD的 Infrastructure layer，负责技术底座的实现</description>
+    <description>Infrastructure Layer</description>
 
     <dependencies>
         <dependency>
@@ -25,40 +27,6 @@
             <groupId>com.example</groupId>
             <artifactId>scheduler-types</artifactId>
         </dependency>
-
-        <!-- <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-      </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-jcl</artifactId>
-        </dependency>
-              <dependency>
-        <groupId>javax.validation</groupId>
-        <artifactId>validation-api</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.hibernate.validator</groupId>
-        <artifactId>hibernate-validator</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.glassfish</groupId>
-        <artifactId>javax.el</artifactId>
-      </dependency> -->
-        <!-- <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency> -->
-        <!-- <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-        </dependency> -->
         <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
