--- a/scheduler-main/pom.xml
+++ b/scheduler-main/pom.xml
@@ -9,6 +9,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <packaging>jar</packaging>
+    <groupId>com.example</groupId>
     <artifactId>scheduler-main</artifactId>
     <name>scheduler-main</name>
 
@@ -79,18 +81,12 @@
     <build>
         <plugins>
             <plugin>
-                <!-- <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <outputDirectory></outputDirectory>
-                </configuration> -->
-
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.6</version>
-                <!-- <configuration>
-                    <outputDirectory></outputDirectory>
-                </configuration> -->
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <outputDirectory>./target</outputDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
