--- a/scheduler-main/src/main/resources/application.properties
+++ b/scheduler-main/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.datasource.password=123456
 
 mybatis.inject-sql-session-on-mapper-scan=true
 mybatis.configuration.default-statement-timeout=30
-log.dir=./logs
-logging.config=classpath:log4j2.xml
+# logging.config=classpath:log4j2.xml
 # spring.kafka.bootstrap-servers=127.0.0.1
 # scheduler.kafka.groupId=test
