--- a/scheduler-domain/pom.xml
+++ b/scheduler-domain/pom.xml
@@ -12,7 +12,7 @@
     <packaging>jar</packaging>
     <artifactId>scheduler-domain</artifactId>
     <name>scheduler-domain</name>
-    <description>Domain Layer</description>
+    <description>Domain Module</description>
 
     <dependencies>
         <dependency>
@@ -73,20 +73,5 @@
             </exclusions>
         </dependency>
     </dependencies>
-
-    <build>
-        <defaultGoal>package</defaultGoal>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
