--- a/scheduler-main/pom.xml
+++ b/scheduler-main/pom.xml
@@ -80,12 +80,22 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <outputDirectory>./target</outputDirectory>
+                    <outputDirectory>../target</outputDirectory>
+                    <classifier>executable</classifier>
+                    <mainClass>com.example.Bootstrap</mainClass>
+                    <layout>ZIP</layout>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>package</id>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
