--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,7 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compile-plugin</artifactId>
+        <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
         <configuration>
           <source>17</source>
@@ -187,9 +187,6 @@
         <version>2.8.1</version>
         <configuration>
           <threadCount>1</threadCount>
-          <source>17</source>
-          <target>17</target>
-          <encoding>UTF-8</encoding>
           <skipTests>true</skipTests>    <!--默认关掉单元测试 -->
         </configuration>
       </plugin>
