--- a/scheduler-service/pom.xml
+++ b/scheduler-service/pom.xml
@@ -10,7 +10,7 @@
 
     <packaging>jar</packaging>
     <artifactId>scheduler-service</artifactId>
-    <name>Service Module</name>
+    <name>scheduler-service</name>
 
     <dependencies>
         <dependency>
